objects/ASI_Process_Builder_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>ASI_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_Batch_Job_API_Name__c</fullName>
        <label>Batch Job API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Batch_Job_Id__c</fullName>
        <label>Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Country__c</fullName>
        <description>Based on User&apos;s ASI_MFM_Country</description>
        <label>ASI Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TW</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>GF</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>RM</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_Cron_Expression__c</fullName>
        <inlineHelpText>Please see the Apex Scheduler docs for proper syntax.</inlineHelpText>
        <label>Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_Job_Name__c</fullName>
        <formula>ASI_Process_API_Name__c  &amp;&apos;_&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Computed name for the scheduled job. This will be the name of the CronJobDetail record that represents the schedule.</inlineHelpText>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Process_API_Name__c</fullName>
        <label>Process API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Times_Triggered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Times Triggered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Process Builder Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_Process_API_Name__c</columns>
        <columns>ASI_Country__c</columns>
        <columns>ASI_Active__c</columns>
        <columns>ASI_Cron_Expression__c</columns>
        <columns>ASI_Batch_Job_API_Name__c</columns>
        <columns>ASI_Times_Triggered__c</columns>
        <columns>ASI_Batch_Job_Id__c</columns>
        <columns>ASI_Job_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Builder Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>